スポンサー部分実装

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+# site setting
 source: src
 destination: _site
 plugins: plugin
@@ -20,3 +21,46 @@ js:
       files:
         - app/jquery.rollover.js
         - main.js
+
+# site data
+sponsors:
+  - 
+    label: Gold Sponsors
+    label_ja: ゴールドスポンサー
+    icon: ico_02.png
+    companies:
+      - 
+        name: Joyent
+        url: http://www.joyent.com
+        img: gold_joyent.png
+        description: |-
+          Joyent は今日の Web やモバイル向けアプリケーションがに求められる高度な要求に特化した、IaaS を提供するハイポフォーマンスなクラウドインフラストラクチャの企業です。
+          また Node.js をの開発を強く牽引する企業でもあり、サーバサイド JavaScript の開発環境を広く扱っています。
+
+          興味のある方は[http://www.joyent.com](http://www.joyent.com)も是非御覧ください。
+
+      - 
+        name: Noejitsu
+        url: http://nodejitsu.com/
+        img: gold_nodejitsu.png
+        description: |-
+          ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。
+
+          ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。
+
+      - 
+        name: GREE
+        url: http://www.gree.co.jp
+        img: gold_gree.png
+        description: |-
+          グリーは、世界最大級のワンプラットフォーム「GREE Platform」をグローバルに展開しています。
+
+          現在、「GREE Platform」にて北米・欧州に配信中で、この秋日本でも提供が開始されるアクションバトルRPG「MONPLA SMASH（モンプラスマッシュ）」はNode.jsを利用しており、世界規模での導入に取り組んでいます。
+
+      - 
+        name: DeNA
+        url: http://dena.jp/engineer/
+        img: gold_dena.png
+        description: |-
+          ディー・エヌ・エー（DeNA）は、日本、英語圏、中国、韓国へワールドワイドのソーシャルゲームプラットフォーム「Mobage」を展開している、インターネットサービス事業を主軸としたグローバルカンパニーです。
+          WW向けコンテンツ展開を支える技術のひとつに、iOS/Androidの両プラットフォーム向けにワンソースでゲームを展開できるクロスプラットフォームゲームエンジン「ngCore」を提供。このプロダクトにおいてNode.jsをはじめとした先鋭的な技術を積極的に活用しています。
