Add nodejistu description

--- a/_config.yml
+++ b/_config.yml
@@ -96,9 +96,8 @@ sponsors:
         url: http://nodejitsu.com/
         img: nodejitsu.png
         description: |-
-          ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。
-
-          ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。ダミーテキスト。
+            NodejitsuはNode.jsの開発者に、多くの最適なツールやサービスを提供します。Nodejitsuが提供するシンプルで信頼性の高いNode.jsのホスティングサービスは、エンタープライズ用途にもライセンス可能で、自社のクラウドでホスティングすることもできます。 チームはオープンソースにも深く貢献しており、多くのプロジェクトにコントリビュートし、コミュニティでも広く活動しています。
+          
       - 
         name: PixelGrid
         url: http://www.pxgrid.com/
