法政大学の概要追加

--- a/_config.yml
+++ b/_config.yml
@@ -128,6 +128,8 @@ sponsors:
         name: 法政大学情報科学部
         url: http://cis.k.hosei.ac.jp/
         img: housei.png
+        description: |-
+          法政大学 情報科学部は、情報科学に関する最先端の専門的知識・技術の修得だけでなく、次から次へ新しい概念と技術を創造し、世界を舞台に情報化社会をリードしてゆく技術者・研究者を最新の教育環境のもとで育成していきます。
 
 sessions:
   #LT:
