sinapの概要追加

--- a/_config.yml
+++ b/_config.yml
@@ -136,6 +136,8 @@ sponsors:
         name: SINAP
         url: http://sinap.jp/
         img: sinap.png
+        description: |-
+          シナップは、コミュニケーションをデザインする会社です。インターネットをコミュニケーション戦略の中心に据え、Webサイト、スマートフォンサイト、アプリ、各種広告・プロモーションなど、コミュニケーション・コンサルティングから実制作まで、一貫してサポートしています。
 
 sessions:
   #LT:
