スポンサー修正

--- a/_config.yml
+++ b/_config.yml
@@ -43,13 +43,13 @@ sponsors:
     icon: ico_01.png
     companies:
       - 
-        name: リクルート
-        url: http://www.recruit.jp/
-        img: recruit.png
+        name: リクルートテクノロジーズ
+        url: http://www.recruit-tech.co.jp/
+        img: recruit_t.png
         description: |-
-          リクルートは、「じゃらん」「SUUMO」「リクナビ」をはじめとする大小様々なWebサービスを展開しています。
+            2012年10月、株式会社リクルートテクノロジーズはリクルートグループのIT・ネットマーケティングテクノロジー開発機能会社として設立されました。
 
-          これらのWebサービスを支えるアーキテクチャとして、Solr・Hadoop等オープンソースを積極的に活用しており、現在、リアルタイムWebの実現に向けNode.jsの導入に取り組んでいます。
+            私たちは、リクルートグループ各社の現在・将来のニーズを見据えて競合優位性の高いIT・ネットマーケティング基盤を開拓、実装することにより、競争優位を構築していきます。業界を驚かせるレベルでテクノロジーの開拓を行い、業界のルールをイノベーションによって変革して行きます。昨今ではWebサービスを支えるアーキテクチャとしてHadoop等のオープンソースを積極的に活用しており、現在、リアルタイムWebの実現に向けNode.jsの導入などに取り組んでいます。
 
 # ゴールドスポンサー
 #=========================
