Change DeNA's link url

--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ sponsors:
     companies:
       - 
         name: DeNA
-        url: http://dena.jp/engineer/
+        url: http://www.dena.jp/
         img: dena.png
         description: |-
           ディー・エヌ・エー（DeNA）は、日本、英語圏、中国、韓国へワールドワイドのソーシャルゲームプラットフォーム「Mobage」を展開している、インターネットサービス事業を主軸としたグローバルカンパニーです。
