--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "handlebars-tryout",
-  "version": "0.0.0",
-  "author": "someone",
-  "devDependencies": {
+  "name": "Nodefest 2013",
+  "version": "0.0.1",
+  "dependencies": {
     "grunt": "~0.4.1",
     "assemble": "~0.4.4"
   }
