--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ _notes
 _delivery
 node_modules
 config.rb
+vendor/bundle
+.bundle
 
 # compiled files
 *.map
@@ -17,3 +19,4 @@ index.html
 sessions.html
 speakers.html
 sponsors.html
+2013/assets/css/style.css
