--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "grunt": "~0.4.1",
-    "assemble": "~0.4.4"
+    "assemble": "~0.4.4",
+    "grunt-contrib-sass": "~0.5.0"
   }
 }
