--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "assemble": "~0.4.4",
     "grunt-contrib-sass": "~0.5.0",
     "grunt-contrib-connect": "~0.3.0",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-clean": "~0.5.0"
   }
 }
