--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-clean": "~0.5.0"
+    "grunt-contrib-clean": "~0.5.0",
+    "chain-tiny": "~0.3.0",
+    "shell-quote": "~1.3.3",
+    "colors": "~0.6.2"
   }
 }
