懇親会スポンサーの表記を追加

--- a/data/sponsor.yml
+++ b/data/sponsor.yml
@@ -30,6 +30,7 @@ sponsors:
   - name  : 株式会社リクルートテクノロジーズ
     url   : http://recruit-tech.co.jp/
     image : img/sponsor_recruit.png
+    type  : 懇親会スポンサー
     text  : |-
         株式会社リクルートテクノロジーズはリクルートグループのIT・ネットマーケティングテクノロジー開発機能会社です。
 
