ニュースのデータ更新
ダミーを削除して公開情報を追加

--- a/data/news.yml
+++ b/data/news.yml
@@ -1,10 +1,2 @@
-- date: 2013.00.01
-  text: テキストテキストテキストテキスト
-- date: 2013.00.00
-  text: テキストテキストテキストテキスト
-- date: 2013.00.00
-  text: テキストテキストテキストテキスト
-- date: 2013.00.00
-  text: テキストテキストテキストテキスト
-- date: 2013.00.00
-  text: テキストテキストテキストテキスト
+- date: 2013.09.27
+  text: 公式サイトを公開しました
