--- a/data/speaker.yml
+++ b/data/speaker.yml
@@ -1,3 +1,3 @@
-- name : Constellation
-  image: img/speaker_constellation.jpg
-  text : 'ECMA262 5.1th に準拠するEngine、iv/lv5を作成し最適化を行なっています。また、ECMAScript parserである[Esprima](http://example.com)のcommitterや、ASTから[ECMAScript](http://example.com)を生成するEscodegenのownerをしています。'
+- name :
+  image:
+  text :
