Update news and index

--- a/data/news.yml
+++ b/data/news.yml
@@ -1,4 +1,6 @@
-- date: 2013.09.27
-  text: 公式サイトを公開しました
+- date: 2013.10.07
+  text: 公募セッション決定！[セッション情報](/2013/sessions.html)を更新しました
 - date: 2013.10.05
   text: 参加者募集を開始しました [東京Node学園祭2013](http://connpass.com/event/3595/)
+- date: 2013.09.27
+  text: 公式サイトを公開しました
