--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,15 @@ Thumbs.db
 _notes
 _delivery
 node_modules
+bower_components
 config.rb
 vendor/bundle
 .bundle
 /deploy
-
+_html/css
+_html/js/app.js
+_html/js/app.min.js
+_html/js/lib.js
+_html/js/lib.min.js
 # compiled files
 /build
