--- a/package.json
+++ b/package.json
@@ -12,5 +12,15 @@
     "chain-tiny": "~0.3.0",
     "shell-quote": "~1.3.3",
     "colors": "~0.6.2"
+  },
+  "devDependencies": {
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-sass": "^0.5.1",
+    "grunt-contrib-uglify": "^0.5.1",
+    "grunt-contrib-watch": "^0.5.3",
+    "grunt-csscomb": "^3.0.0",
+    "grunt-csso": "^0.6.3",
+    "grunt-image": "^0.8.1",
+    "grunt-spritesmith": "^2.1.1"
   }
 }
