--- a/package.json
+++ b/package.json
@@ -1,19 +1,10 @@
 {
   "name": "Nodefest2013",
   "version": "0.0.1",
-  "dependencies": {
-    "grunt": "~0.4.1",
-    "assemble": "~0.4.4",
-    "grunt-contrib-sass": "~0.5.0",
-    "grunt-contrib-connect": "~0.3.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "chain-tiny": "~0.3.0",
-    "shell-quote": "~1.3.3",
-    "colors": "~0.6.2"
-  },
   "devDependencies": {
+    "bower": "^1.3.9",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-sass": "^0.5.1",
     "grunt-contrib-uglify": "^0.5.1",
