--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,9 @@
     "jquery-easing": "danro/jquery-easing",
     "three.js": "mrdoob/three.js#r68",
     "PeriodicEventEmitter": "yomotsu/PeriodicEventEmitter",
-    "socket.io-client": "Automattic/socket.io-client#~1.0.6"
+    "socket.io-client": "Automattic/socket.io-client#~1.0.6",
+    "platform": "polymer/platform#~0.3.5",
+    "google-map": "~0.3.1",
+    "core-shared-lib": "polymer/core-shared-lib#~0.3.5"
   }
 }
