--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-csscomb": "^3.0.0",
     "grunt-csso": "^0.6.3",
     "grunt-image": "^0.8.1",
+    "grunt-notify": "^0.3.1",
     "grunt-spritesmith": "^2.1.1",
     "socket.io": "^1.0.6"
   }
