--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "grunt-csso": "^0.6.3",
     "grunt-image": "^0.8.1",
     "grunt-notify": "^0.3.1",
-    "grunt-spritesmith": "^2.1.1",
-    "socket.io": "^1.0.6"
+    "grunt-spritesmith": "^2.1.1"
   }
 }
