--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "Nodefest2014",
+  "name": "nodefest.github.com#2014",
   "version": "0.0.1",
+  "scripts": {
+    "postinstall": "bower i"
+  },
   "devDependencies": {
     "assemble": "^0.4.41",
     "bower": "^1.3.9",
+    "chain-tiny": "^0.3.0",
+    "colors": "^0.6.2",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
@@ -16,6 +21,7 @@
     "grunt-csso": "^0.6.3",
     "grunt-image": "^0.8.1",
     "grunt-notify": "^0.3.1",
-    "grunt-spritesmith": "^2.1.1"
+    "grunt-spritesmith": "^2.1.1",
+    "shell-quote": "^1.4.2"
   }
 }
