remove backslashes from 2016/manifest.json

--- a/2016/manifest.json
+++ b/2016/manifest.json
@@ -2,14 +2,14 @@
 	"name": "nodefest2016",
 	"icons": [
 		{
-			"src": "\img\/icons\/android-chrome-192x192.png",
+			"src": "img/icons/android-chrome-192x192.png",
 			"sizes": "192x192",
-			"type": "image\/png"
+			"type": "image/png"
 		},
 		{
-			"src": "\img\/icons\/android-chrome-512x512.png",
+			"src": "img/icons/android-chrome-512x512.png",
 			"sizes": "512x512",
-			"type": "image\/png"
+			"type": "image/png"
 		}
 	],
 	"theme_color": "#ffffff",
