--- a/2016/package.json
+++ b/2016/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.13.2",
     "browser-sync": "~2.14.0",
+    "browserify": "^13.1.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "~3.1.0",
     "gulp-clean-css": "^2.0.12",
@@ -32,7 +33,9 @@
     "gulp-postcss": "~6.1.1",
     "gulp-sass": "^2.3.2",
     "gulp-stylelint": "~3.0.0",
-    "gulp-uglify": "~2.0.0",
-    "gulp-util": "~3.0.7"
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "~3.0.7",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
