--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node学園祭公式サイトのリポジトリです。",
   "main": "app.js",
   "scripts": {
-    "server": "node ./app.js",
+    "start": "node ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
