IEははやくPromiseを実装しろ！！

--- a/2016/package.json
+++ b/2016/package.json
@@ -32,5 +32,8 @@
     "gulp-util": "~3.0.7",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "es6-promise": "^4.0.5"
   }
 }
