Update pkgs for 2017

--- a/2017/package.json
+++ b/2017/package.json
@@ -5,30 +5,30 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp",
+    "build": "gulp build",
     "dev": "gulp dev"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "~2.14.0",
-    "browserify": "^13.1.0",
+    "browser-sync": "~2.18.13",
+    "browserify": "^14.4.0",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "~3.1.0",
-    "gulp-clean-css": "^2.0.12",
+    "gulp-autoprefixer": "~4.0.0",
+    "gulp-clean-css": "^3.8.0",
     "gulp-concat": "~2.6.0",
     "gulp-connect": "^5.0.0",
     "gulp-csscomb": "~3.0.7",
-    "gulp-ejs": "^2.2.0",
+    "gulp-ejs": "^3.0.1",
     "gulp-hologram": "^1.2.0",
-    "gulp-imagemin": "~3.0.2",
+    "gulp-imagemin": "~3.3.0",
     "gulp-merge-media-queries": "~0.2.1",
-    "gulp-notify": "~2.2.0",
+    "gulp-notify": "~3.0.0",
     "gulp-plumber": "~1.1.0",
-    "gulp-postcss": "~6.1.1",
-    "gulp-sass": "^2.3.2",
-    "gulp-stylelint": "~3.0.0",
-    "gulp-uglify": "^2.0.0",
+    "gulp-postcss": "~7.0.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-stylelint": "~5.0.0",
+    "gulp-uglify": "^3.0.0",
     "gulp-util": "~3.0.7",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
