--- a/2017/package.json
+++ b/2017/package.json
@@ -16,6 +16,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "~4.0.0",
     "gulp-clean-css": "^3.8.0",
+    "gulp-cli": "^1.4.0",
     "gulp-concat": "~2.6.0",
     "gulp-connect": "^5.0.0",
     "gulp-csscomb": "~3.0.7",
