--- a/2018/package.json
+++ b/2018/package.json
@@ -7,13 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "gulp clean",
     "build": "gulp build",
-    "dev": "gulp dev"
+    "dev": "gulp dev",
+    "update-speakers": "./scripts/update-speakers.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "~2.24.4",
     "browserify": "^16.2.2",
+    "case": "^1.5.5",
+    "csv-parse": "^3.1.3",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "~5.0.0",
@@ -32,6 +35,8 @@
     "gulp-stylelint": "~7.0.0",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "~3.0.8",
+    "node-fetch": "^2.2.0",
+    "sharp": "^0.21.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
