--- a/2018/package.json
+++ b/2018/package.json
@@ -16,8 +16,10 @@
     "browser-sync": "~2.24.4",
     "browserify": "^16.2.2",
     "case": "^1.5.5",
+    "conf-cal": "^2.9.0",
     "csv-parse": "^3.1.3",
     "del": "^3.0.0",
+    "fse": "^4.0.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "~5.0.0",
     "gulp-clean-css": "^3.9.4",
@@ -41,6 +43,8 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
-    "es6-promise": "^4.2.4"
+    "es6-promise": "^4.2.4",
+    "moment-timezone": "^0.5.21",
+    "observ-location-hash": "^1.0.2"
   }
 }
